# CloudGuardStack

./: .coverage  .gitignore  CONTRIBUTING.md  README.md  auto-demo.ps1  integrated-demo.ps1  pyproject.toml  pytest.ini  record-demo.ps1  requirements-test.txt  requirements.txt  run-demo.ps1  setup-demo-window.ps1  setup.ps1  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml  deploy-verify.yml  iac-scan.yml
ci-cd/: pre-commit-config.yaml
ci-cd/gitlab-ci/: .gitlab-ci.yml
docs/: ci-cd-configuration.md  demo-script.md  linkedin-post.md
docs/architecture/: component-diagram.md  data-flow.md
notebooks/: demo_analysis.ipynb  iam_entitlement_analysis.ipynb  security_analysis.ipynb
policies/checkov/: custom_policies.py
policies/cloud-custodian/: aws.yml  azure.yml  gcp.yml
policies/opa/: kubernetes.rego  storage.rego  terraform.rego
scanners/iam_entitlement/: demo_generator.py  remediation_generator.py  reporter.py  scanner.py  utils.py  visualizer.py
scanners/reports/: generator.py  templates.py
scanners/storage_auditor/: demo_generator.py  remediation.py  reporter.py  scanner.py  utils.py
scripts/: render_demo_graphs.py  setup-github-actions.ps1  verify-structure.sh
scripts/ci/: connectivity-tester.py  policy-checker.py  post-deploy-scans.py  test-ephemeral-accounts.sh
scripts/cleanup/: archive-logs.sh  remove-resources.sh
scripts/demo/: setup-siem-demo.sh
scripts/setup/: install-tools.sh  (+5 more)
siem/: docker-compose.yml
terraform/: main.tf  outputs.tf  providers.tf  variables.tf
tests/: conftest.py
(+67 files in other folders)
