[project]
name = "cloud-guard-stack"
version = "0.1.0"
description = "Enterprise-grade cloud security baseline for ephemeral environments"
authors = [
    {name = "Your Name", email = "your.email@domain.com"},
]
dependencies = [
    "boto3>=1.28.0",
    "azure-identity>=1.12.0",
    "azure-mgmt-monitor>=6.0.0",
    "azure-mgmt-storage>=21.0.0",
    "google-cloud-storage>=2.10.0",
    "google-cloud-logging>=3.5.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "networkx>=3.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true